feat(category): add productCount field and enhance delete validation
- Add productCount field to CategoryData DTO to track active products per category
- Update category API documentation with productCount in all response examples
- Enhance delete endpoint validation to block deletion if category has products
- Update GET single category endpoint description to include productCount info
- Add validation notes for delete operations referencing productCount checks
- Update hard-delete endpoint notes to clarify product count blocking rules
- Enhance category capture script to handle productCount field in API responses
- Update CategoryJpaRepository and CategoryRepositoryImpl to support product counting
- Add productCount to list and tree responses for better client-side validation
- Improve API documentation with clear guidance on using productCount for delete validation